<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".FullscreenActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bistro"
            android:textSize="40sp" 
            android:layout_marginLeft="200dp"/>

        <TextView
            android:id="@+id/textView111"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="20sp" 
            android:layout_marginLeft="200dp"/>
        
         <ImageView
            android:id="@+id/imageView1"
            android:layout_marginLeft="200dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/question" 
            android:contentDescription="@string/bistro"
            android:scaleType="fitXY"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="50dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/order"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="201dp"
                android:layout_height="156dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_margin="20dp"
                android:layout_marginTop="107dp"
                android:contentDescription="@string/food"
                android:src="@drawable/food" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView1"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="57dp"
                android:text="@string/food"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView1"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="74dp"
                android:layout_toRightOf="@+id/imageView1"
                android:contentDescription="@string/drink"
                android:src="@drawable/drink" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/imageView2"
                android:layout_alignTop="@+id/textView4"
                android:layout_marginRight="90dp"
                android:text="@string/drink"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_alignLeft="@+id/imageView1"
                android:layout_below="@+id/textView4"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="59dp"
                android:contentDescription="@string/ask"
                android:scaleType="fitXY"
                android:src="@drawable/waiter" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView3"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="31dp"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/ask"
                android:textSize="30sp" />
        </RelativeLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="450dp"
            android:layout_marginRight="80dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="46dp"
                android:contentDescription="@string/bill"
                android:scaleType="fitXY"
                android:src="@drawable/card" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_alignTop="@+id/imageView4"
                android:layout_marginLeft="79dp"
                android:layout_toRightOf="@+id/imageView4"
                android:contentDescription="@string/bill"
                android:scaleType="fitXY"
                android:src="@drawable/cash" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imageView4"
                android:layout_marginTop="73dp"
                android:text="@string/more"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="32dp"
                android:text="@string/share"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp"
                android:text="@string/rate"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@+id/imageView4"
                android:numStars="5"
                android:rating="4"
                android:stepSize="1.2" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/ratingBar1"
                android:layout_alignTop="@+id/textView8"
                android:contentDescription="@string/share"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/imageView5"
                android:layout_alignTop="@+id/imageView6"
                android:layout_marginLeft="21dp"
                android:contentDescription="@string/share"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignTop="@+id/imageView7"
                android:layout_toRightOf="@+id/imageView5"
                android:contentDescription="@string/share"
                android:src="@drawable/twitter" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>